--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,11 @@
 <IfModule mod_rewrite.c>
-    RewriteEngine On 
-    RewriteCond %{REQUEST_FILENAME} !-f 
-    RewriteCond %{REQUEST_FILENAME} !-d 
-    RewriteRule ^(.*)$ inge_web_uno/index.php/$1 [L] 
+RewriteEngine On
+RewriteBase /codeigniter
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /inge_web_uno/index.php/$1 [L]
 </IfModule>
 <IfModule !mod_rewrite.c>
-    ErrorDocument 404 index.php 
+ErrorDocument 404 
 </IfModule>
+
